Display fixes on small screens.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -6,36 +6,16 @@ header {
 main {
   min-height: 100vh;
   width: 100%;
-
-  // background-color: black;
-  // background-image: url("https://cdn.pixabay.com/photo/2011/12/13/14/30/mars-11013_1280.jpg");
-  // background-size: 40% 70%;
-  // background-position: 50% 50%;
-  // background-repeat: no-repeat;
-
-  // background-color: black;
-  // background-image: url("https://cdn.pixabay.com/photo/2012/01/09/10/21/mars-11608_1280.jpg");
-  // background-size: 100% 80%;
-  // background-position: 0% 100%;
-  // background-repeat: no-repeat;
-
   background-image: url("https://cdn.pixabay.com/photo/2011/12/13/14/30/mars-11012_1280.jpg");
   background-repeat: no-repeat;
-  background-position: center;
-  background-size: 650px;
-
-  // background-image: url("https://cdn.pixabay.com/photo/2020/09/11/20/33/mars-5564141_1280.jpg");
-  // background-size: cover;
-  // background-repeat: no-repeat;
-
-  // background-image: url("https://cdn.pixabay.com/photo/2012/01/09/10/31/planet-11613_1280.jpg");
-  // background-size: 100% 100%;
-  // background-repeat: no-repeat;
+  background-position: top center;
+  background-size: 400px;
 }
 
 footer {
   width: 80%;
   margin: 0 auto;
+  margin-top: 2rem;
   text-align: center;
 }
 
